[gd_scene load_steps=7 format=3 uid="uid://ctcjiyk0hbt3s"]

[ext_resource type="Script" uid="uid://b7j6n2g15nnat" path="res://scene/ui/options_menu.gd" id="1_sqx4l"]
[ext_resource type="AudioStream" uid="uid://c1gq6dbw7e8fq" path="res://assets/audio/music/The_Bards_Tale.ogg" id="2_8t4ch"]
[ext_resource type="Texture2D" uid="uid://3ereqe37g0bj" path="res://assets/—è.png" id="4_8bhjn"]
[ext_resource type="PackedScene" uid="uid://dm0ka7mrwvv8n" path="res://scene/ui/sound_button.tscn" id="5_selpi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8wb42"]
texture = ExtResource("4_8bhjn")
texture_margin_left = 19.0
texture_margin_top = 26.0
texture_margin_right = 20.0
texture_margin_bottom = 21.0
region_rect = Rect2(16, 4, 31, 56)

[sub_resource type="Theme" id="Theme_k3dtv"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_8wb42")

[node name="OptionsMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_sqx4l")

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8t4ch")
volume_db = -15.0
pitch_scale = 0.9
bus = &"Music"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_k3dtv")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="SFXContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="WindowModeContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeContainer"]
layout_mode = 2
text = "Window Mode"

[node name="WindowModeButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeContainer" instance=ExtResource("5_selpi")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_selpi")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeContainer/WindowModeButton" to="." method="_on_window_mode_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
